# course_work_3

./: .gitignore  pyproject.toml
classes/: class_add_list.py
data/: correct_f.json
tests/: test_untils.py
untils/: main.py  untils.py  untils_2.py
utils/: main.py  untils_2.py  utils_2.py
